new vercel changes

--- a/config.env
+++ b/config.env
@@ -1,4 +1,5 @@
 NODE_ENV=development
+PORT=8000
 DATABASE=mongodb+srv://aman:<PASSWORD>@cluster0.onfzuum.mongodb.net/ecommerce?retryWrites=true&w=majority
 DATABASE_LOCAL=mongodb://localhost:27017/ecommerce
 DATABASE_PASSWORD=5auIWAEYXjnH15xz
